@@ -1,4 +1,5 @@
 LibOFX 0.?????????:
+	-Add an account_name to the OfxAccountData struct.  It contains a human readable identifier of the account.
 	-Include file location seems to have changed in recent versions of OpenSP.  Included old and new case.
 	-Profiling now possible.  It is now posible to use "make static".  Statically linked ofxdump and ofx2qif will be created, with profiling enabled.
 LibOFX 0.3:
